<resources>
    <string name="app_name">Parvaneh</string>
    <string name="title_activity_login">ورود</string>
    <string name="today">امروز</string>
    <string name="tommorrow">فردا</string>
    <string name="edit">ویرایش</string>

    <!-- Strings related activity_intro -->
    <string name="next">بعدی</string>
    <string name="start">شروع</string>
    <string name="skip">رد شو</string>

    <!-- Strings related activity_login -->
    <string name="login">ورود به حساب کاربری</string>
    <string name="signup">ایجاد حساب کاربری</string>
    <string name="email">پست الکترونیک</string>
    <string name="password">رمز ورود</string>
    <string name="password_confirm">تکرار رمز ورود</string>
    <string name="forgetLink">رمزت رو فراموش کردی؟</string>
    <string name="signupQ">حساب کاربری نداری؟ </string>
    <string name="signupLink">ثبت نام کن</string>

    <string name="action_sign_in">ورود</string>
    <string name="action_sign_up">ثبت نام</string>
    <string name="action_retrieve">بازیابی</string>
    <string name="action_retrieve_request">درخواست ارسال کد بازیابی</string>
    <string name="action_sign_in_short">ورود</string>
    <string name="error_invalid_email">پست الکترونیک وارد شده نامعتبر است</string>
    <string name="error_invalid_password">رمز ورود وارد شده نامعتبر است</string>
    <string name="error_empty_password">رمز ورودی وارد نشده است</string>
    <string name="error_invalid_confirm_password">تکراری رمز ورود با رمز ورود وارده شده مطابقت ندارد</string>
    <string name="error_field_required">وارد کردن این گزینه اجباری است</string>

    <string name="loginq">حساب کاربری داری؟</string>
    <string name="loginLink">وارد شو</string>
    <string name="login_error">رمزورود وارد شده اشتباه است و یا کاربری با این پست الکترونیک وجود ندارد.</string>
    <string name="forget">بازیابی رمزورود</string>
    <string name="open">بازکردن</string>
    <string name="close">بستن</string>

    <!-- Strings related activity_menu -->
    <string name="activity_menu_title">بخش های برنامه</string>
    <string name="massage_learning">آموزش ماساژ</string>
    <string name="sport_tests">آزمون های ورزشی</string>
    <string name="sport_plans">برنامه های ورزشی</string>
    <string name="terminologies">اصطلاحات تخصصی</string>
    <string name="food_plans">برنامه های غذایی</string>
    <string name="profile">پرونده تخصصی</string>
    <string name="body_building_learnings">آموزش حرکات بدنسازی</string>
    <string name="talent_detecting">استعدادیابی</string>
    <string name="activity_sportplans_title">برنامه های ورزشی</string>

    <!-- Strings related activity_new_sportplan -->
    <string name="activity_new_sportplan_title">برنامه ورزشی جدید</string>
    <string name="new_sp_time_hint">چه زمانی این ورزش شروع میشه؟</string>

    <!-- Strings related activity_profile -->
    <string name="name">نام</string>
    <string name="Lname">نام خانوادگی</string>
    <string name="height">قد</string>
    <string name="weight">وزن</string>
    <string name="city">شهر</string>

    <!-- Strings related activity_terminology -->
    <string name="activity_terminology_title">اصطلاحات تخصصی</string>
    <string name="search_hint">جستجو...</string>
    <string name="corporeal_info_block_title">اطلاعات جسمی</string>
    <string name="dob">تاریخ تولد</string>
    <string name="profile_title">اطلاعات فردی</string>
    <string name="done">تایید</string>
    <string name="new_sp_finish_time_hint">چه زمانی این ورزش تموم میشه؟</string>
    <string name="remove">حذف</string>
    <string name="activity_sporttests_title">تست های ورزشی</string>
    <string name="new_sp_btn">اضافه کردن برنامه جدید</string>
    <string name="new_sport_btn">اضافه کردن ورزش جدید</string>
    <string name="new_rest_btn">استراحت</string>
    <string name="startPlan">شروع برنامه</string>
    <string name="easy">آسان</string>
    <string name="editplan">ویرایش برنامه</string>
    <string name="minutes">دقیقه</string>
    <string name="new_sp_title_hint">اسم این برنامه چیه؟</string>
    <string name="removeAll">حذف کل\nبرای حذف دکمه را نگه دارید</string>
    <string name="removed">حذف شد</string>
    <string name="five_minutes">5</string>
    <string name="ten_minutes">10</string>
    <string name="rest">استراحت</string>
    <string name="medium">متوسط</string>
    <string name="hard">سخت</string>
    <string name="account_info_title">اطلاعات حساب کاربری</string>
    <string name="change_password_title">تغییر رمز ورود</string>
    <string name="verify_code_hint">کد بازیابی رمز ارسال شده به پست الکترونیک</string>
    <string name="email_not_found">ارتباط برقرار نشد یا پست الکترونیک مورد نظر یافت نشد</string>

    <string name="incomplete_account_info_error">اطلاعات حساب کاربری شما ناقص است. لطفا نسبت به تکمیل آن اقدام نمایید.</string>
    <string name="incomplete_profile_error">اطلاعات فردی شما ناقص است. لطفا نسبت به تکمیل آن اقدام نمایید.</string>
    <string name="not_connected_error">اتصال برقرار نیست</string>
</resources>
