<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="ir.geek.parvaneh.SignupActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/forget"
        android:textSize="30dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:id="@+id/forget_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/logo"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textinputbg"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textIsSelectable="false"
                android:textSize="20dp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/forgetBtn"
            style="@style/PrimaryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_layout"
            android:layout_marginTop="10dp"
            android:text="@string/action_retrieve_request"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/verify_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/logo"
        android:padding="16dp"
        android:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/verify_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textinputbg"
            android:orientation="vertical">

            <EditText
                android:id="@+id/code_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/verify_code_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textIsSelectable="false"
                android:textSize="20dp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/checkCodeBtn"
            style="@style/PrimaryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/verify_layout"
            android:layout_marginTop="10dp"
            android:text="@string/action_retrieve"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layoutDirection="rtl">

        <TextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginLink"
            android:textColor="@color/link" />

    </LinearLayout>

    <!--forget progress -->

    <ProgressBar
        android:id="@+id/forget_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:background="#99000000"
        android:padding="100dp"
        android:visibility="gone" />
</RelativeLayout>
