<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sport_plan_sport"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/block_bg"
    android:elevation="4dp"
    android:layoutDirection="rtl">

    <ImageView
        android:id="@+id/drag_handle"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_drag_handle" />

    <RelativeLayout
        android:id="@+id/sport_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/drag_handle"
        android:layout_toLeftOf="@+id/drag_handle"
        android:layout_toStartOf="@+id/removeLayout"
        android:visibility="gone">

        <EditText
            android:id="@+id/sport_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textinputbg"
            android:text="عنوان"
            android:textColor="@color/blue_grey"
            android:textSize="25dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/duration_icon"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_below="@id/sport_title"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_timer" />

        <EditText
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sport_title"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/duration_icon"
            android:background="@drawable/textinputbg"
            android:inputType="number"
            android:padding="2dp"
            android:text="۴۰"
            android:textColor="@color/blue_grey"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sport_title"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/duration"
            android:text="@string/minutes"
            android:textSize="16sp" />


        <Button
            android:id="@+id/edit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginVertical="10dp"
            android:background="@drawable/selecectedtextinputbg"
            android:padding="0dp"
            android:text="@string/edit"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rest_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/drag_handle"
        android:layout_toLeftOf="@+id/drag_handle"
        android:layout_toStartOf="@+id/removeLayout"
        android:visibility="gone">

        <TextView
            android:id="@+id/rest_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/rest"
            android:textColor="@color/blue_grey"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/rest_durs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/rest_title"
            android:layout_toLeftOf="@id/rest_title">

            <Button
                android:id="@+id/rest_dur1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/textinputbg"
                android:text="@string/five_minutes"
                android:textColor="@color/blue_grey" />

            <Button
                android:id="@+id/rest_dur2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:layout_toEndOf="@id/rest_dur1"
                android:background="@drawable/textinputbg"
                android:text="@string/ten_minutes"
                android:textColor="@color/blue_grey" />

            <Button
                android:id="@+id/rest_dur3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:layout_toEndOf="@id/rest_dur2"
                android:background="@drawable/textinputbg"
                android:drawableTop="@drawable/ic_timer" />
        </RelativeLayout>

    </RelativeLayout>

    <ir.geek.parvaneh.squareLayout
        android:id="@+id/removeLayout"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:background="@drawable/removebtn"
        android:padding="@null">

        <Button
            android:id="@+id/remove"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/remove"
            android:textColor="@color/link" />
    </ir.geek.parvaneh.squareLayout>
</RelativeLayout>
